# pie-stream

./: .flake8  .gitignore  .pre-commit-config.yaml  api.py  app.py  install.sh  lint.sh  main.py  media.json  player.py  pyproject.toml  start.sh  streamdeck.py
backend/: album.py  api.py  cd_ripper.py  constants.py  controller.py  player.py  streamdeck.py
streamdeck/: controller.py
webapp/: .eslintrc.js  .prettierrc.js  eslint.config.js  package-lock.json  package.json  vite.config.ts
webapp/.github/: copilot-instructions.md
webapp/src/: App.vue  api.ts  main.ts  types.ts
webapp/src/components/: AlbumList.vue  NowPlaying.vue
